--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </div>
 
   <div class=content>
-    <p><em>About：本文需要少少 Node.js 基础和 ES6 语法知识辅助阅读，通过本文，你可以在任意主机搭建服务器环境，当所监听的目录发生文件变化时刷新所有正在访问本主机的设备上的页面，所见即所得</em></p>
+    <p><em>About：本文需要少少 Node.js 基础和 ES6 语法知识辅助阅读，通过本文，你可以在任意主机搭建服务器环境，当所监听的目录发生文件变化时刷新所有正在访问本主机的设备上的页面</em></p>
   </div>
   <a class=read-more href='/2017/12/CreateLiveServer/'>Read More</a>
 </div>
