--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,7 @@
         <div class=col-sm-12>
           <header>
             <div class=logo>
-              <h1 id=main-title class=title>项目实例</h1>
+              <h1 id=main-title class=title>项目示例</h1>
             </div>
           </header>
           <section class='main archive-container' id=content></section>
