--- a/examples/repo/02/index.html
+++ b/examples/repo/02/index.html
@@ -5,9 +5,10 @@
 <script>
   document.getElementsByTagName('html')[0].style.fontSize = innerWidth / 7.2 + 'px'
 </script>
-<link rel=stylesheet href=./../../css/lib/reset.min.css>
-<link rel=stylesheet href=./../../css/lib/clever.min.css>
-<link rel=stylesheet href=./css/index/index.css>
+<link rel=stylesheet href=./../../css/lib/reset.min.css?201901311518>
+<link rel=stylesheet href=./../../css/lib/clever.min.css?201901311518>
+<link rel=stylesheet href=./../../css/lib/example.min.css?201901311518>
+<link rel=stylesheet href=./css/index/index.css?201901311518>
 
 <div id=app v-cloak v-on:click.once=Bgm(1)>
   <div is=cp-page name=loading>
@@ -59,7 +60,6 @@
         <img class='p_middle game_cell_people_img' v-bind:src='"img/people/" + people_face + people_img + ".png"'>
       </div>
     </div>
-    <img class=game_rule src=img/btn_rule.png v-suit=87,88 touchable v-on:click.prevent=Rule>
     <img class=game_music v-bind:src='"img/btn_music_" + bgm + ".png"' v-suit=87,87 touchable v-on:click.prevent.stop=Bgm>
     <div class=game_start v-suit=179,160 v-on:click=Start>
       <div class=game_life v-on:click.stop>可投 <span class=game_life_val>{{life}}</span> 次</div>
@@ -69,11 +69,6 @@
     </div>
   </div>
   <div is=cp-wrap name=ralert>
-    <div is=cp-pop name=rule>
-      <img class=bg src=img/pop/bg_rule.png>
-      <div is=cp-roll class=rule_content v-bind:html=rule></div>
-      <img class='p_center alert_close' src=img/pop/btn_close.png touchable v-on:click.prevent=RalertClose>
-    </div>
     <div is=cp-pop name=desc>
       <img class=bg src=img/pop/bg_coin.png>
       <div class=desc_coin_line>到達這裡,你將有機會獲得</div>
@@ -110,11 +105,10 @@
   </div>
 </div>
 
-<script src=./../../js/lib/loading.min.js></script>
-<script src=./../../js/lib/vue@2.5.22.min.js></script>
-<script src=./../../js/lib/clever.min.js></script>
-<script src=./../../js/lib/ua.min.js></script>
-<script src=./../../js/lib/qrcode.min.js></script>
-<script src=./../../js/lib/example.min.js></script>
-<script src=./js/index/map.js></script>
-<script src=./js/index/index.js></script>
+<script src=./../../js/lib/vue@2.5.22.min.js?201901311518></script>
+<script src=./../../js/lib/clever.min.js?201901311518></script>
+<script src=./../../js/lib/ua.min.js?201901311518></script>
+<script src=./../../js/lib/qrcode.min.js?201901311518></script>
+<script src=./../../js/index/example.js?201901311518></script>
+<script src=./js/index/map.js?201901311518></script>
+<script src=./js/index/index.js?201901311518></script>
