--- a/examples/repo/07/index.html
+++ b/examples/repo/07/index.html
@@ -99,4 +99,4 @@
 <script src=./../../js/lib/laya.core.min.js?2019020131509></script>
 <script src=./../../js/lib/laya.webgl.min.js?2019020131509></script>
 <script src=./../../js/index/example.js?2019020131509></script>
-<script src=./js/index.source/index.js?2019020131509></script>
+<script src=./js/index/index.js?2019020131509></script>
