--- a/examples/index.html
+++ b/examples/index.html
@@ -5,39 +5,49 @@
 <script>
   document.getElementsByTagName('html')[0].style.fontSize = innerWidth / 7.2 + 'px'
 </script>
-<link rel=stylesheet href=css/lib/reset.min.css?201902131554>
-<link rel=stylesheet href=css/lib/clever.min.css?201902131554>
-<link rel=stylesheet href=css/lib/vant.min.css?201902131554>
-<link rel=stylesheet href=css/lib/example.min.css?201902131554>
-<link rel=stylesheet href=css/index/index.css?201902131554>
+<link rel=stylesheet href=css/lib/reset.min.css?201902131729>
+<link rel=stylesheet href=css/lib/clever.min.css?201902131729>
+<link rel=stylesheet href=css/lib/vant.min.css?201902131729>
+<link rel=stylesheet href=css/lib/example.min.css?201902131729>
+<link rel=stylesheet href=css/index/index.css?201902131729>
 
 <div id=app v-cloak>
   <div is=cp-page name=index>
-    <van-nav-bar v-bind:title='"项目案例(x" + db.length + ")"'></van-nav-bar>
-    <div is=cp-roll class=content>
-      <van-cell class=f_vetically is-link v-for='n in db' v-bind:url='"repo/" + n.link + "/index.html"'>
-        <div class='f_vetically item'>
-          <img class=item_img v-bind:src=n.imgs[0] touchable v-on:click.prevent.stop=Pre(n)>
-          <div class=item_info>
-            <div class=item_title>{{n.name}}</div>
-            <div class='h_wrap item_desc'>{{n.desc}}</div>
-            <div class=item_user>
-              <van-tag class=item_user_item type=primary v-for='u in n.user'>{{u}}</van-tag>
+    <van-nav-bar v-bind:title='"项目案例(" + db.length + ")"' v-on:click-right=ChangeMode>
+      <van-icon v-bind:name='mode == "list" ? "photo-o" : "wap-nav"' size=.4rem color=#313131 slot=right></van-icon>
+    </van-nav-bar>
+    <div is=cp-roll class=content v-bind:class='"mode_" + mode'>
+      <template v-if='mode == "list"'>
+        <van-cell class=f_vetically is-link v-for='n in db' v-bind:url='"repo/" + n.link + "/index.html"'>
+          <div class='f_vetically item'>
+            <img class=item_img v-bind:src=n.imgs[0] touchable v-on:click.prevent.stop=Pre(n)>
+            <div class=item_info>
+              <div class=item_title>{{n.name}}</div>
+              <div class='h_wrap item_desc'>{{n.desc}}</div>
+              <div class=item_user>
+                <van-tag class=item_user_item type=primary v-for='u in n.user'>{{u}}</van-tag>
+              </div>
+              <div class=item_tips>点击图片预览项目</div>
             </div>
-            <div class=item_tips>点击图片预览项目</div>
           </div>
+        </van-cell>
+      </template>
+      <template v-else>
+        <div class=mode_thumb_item v-for='n in db' v-on:click=NavTo(n.link)>
+          <img class=item_img v-bind:src=n.imgs[0]>
+          <div class=item_title>{{n.name}}</div>
         </div>
-      </van-cell>
+      </template>
       <div class=null>更多案例等待补充中</div>
     </div>
   </div>
 </div>
 
-<script src=js/lib/vue@2.5.22.min.js?201902131554></script>
-<script src=js/lib/clever.min.js?201902131554></script>
-<script src=js/lib/vant.min.js?201902131554></script>
-<script src=js/lib/ua.min.js?201902131554></script>
-<script src=js/lib/qrcode.min.js?201902131554></script>
-<script src=js/index/db.js?201902131554></script>
-<script src=js/index/example.js?201902131554></script>
-<script src=js/index/index.js?201902131554></script>
+<script src=js/lib/vue@2.5.22.min.js?201902131729></script>
+<script src=js/lib/clever.min.js?201902131729></script>
+<script src=js/lib/vant.min.js?201902131729></script>
+<script src=js/lib/ua.min.js?201902131729></script>
+<script src=js/lib/qrcode.min.js?201902131729></script>
+<script src=js/index/db.js?201902131729></script>
+<script src=js/index/example.js?201902131729></script>
+<script src=js/index/index.js?201902131729></script>
