--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       </li>
     
     <li class="nav-item">
-      <a class="nav-item-link nav-item-search" title="Suche">
+      <a class="nav-item-link" title="Suche">
         <i class="fe fe-search"></i>
         Search
       </a>
