--- a/examples/repo/06/index.html
+++ b/examples/repo/06/index.html
@@ -5,11 +5,11 @@
 <script>
   document.getElementsByTagName('html')[0].style.fontSize = innerWidth / 7.2 + 'px'
 </script>
-<link rel=stylesheet href=./../../css/lib/reset.min.css?2019020121424>
-<link rel=stylesheet href=./../../css/lib/clever.min.css?2019020121424>
-<link rel=stylesheet href=./../../css/lib/swiper.min.css?2019020121424>
-<link rel=stylesheet href=./../../css/lib/example.min.css?2019020121424>
-<link rel=stylesheet href=./css/index/index.css?2019020121424>
+<link rel=stylesheet href=./../../css/lib/reset.min.css?190301>
+<link rel=stylesheet href=//raw.githack.com/XAIOS/lib/master/clever/clever.min.css>
+<link rel=stylesheet href=./../../css/lib/swiper.min.css?190301>
+<link rel=stylesheet href=./../../css/lib/example.min.css?190301>
+<link rel=stylesheet href=./css/index/index.css?190301>
 
 <div id=app v-cloak>
   <div is=cp-page name=loading>
@@ -115,11 +115,11 @@
   </div>
 </div>
 
-<script src=./../../js/lib/vue@2.5.22.min.js?2019020121424></script>
-<script src=./../../js/lib/clever.min.js?2019020121424></script>
-<script src=./../../js/lib/swiper.min.js?2019020121424></script>
-<script src=./../../js/lib/loading.min.js?2019020121424></script>
-<script src=./../../js/lib/ua.min.js?2019020121424></script>
-<script src=./../../js/lib/qrcode.min.js?2019020121424></script>
-<script src=./../../js/index/example.js?2019020121424></script>
-<script src=./js/index/index.js?2019020121424></script>
+<script src=./../../js/lib/vue.min.js?190301></script>
+<script src=//raw.githack.com/XAIOS/lib/master/clever/clever.min.js></script>
+<script src=./../../js/lib/loading.min.js?190301></script>
+<script src=./../../js/lib/ua.min.js?190301></script>
+<script src=./../../js/lib/qrcode.min.js?190301></script>
+<script src=./../../js/lib/swiper.min.js?190301></script>
+<script src=./../../js/index/example.js?190301></script>
+<script src=./js/index/index.js?190301></script>
