--- a/examples/repo/02/index.html
+++ b/examples/repo/02/index.html
@@ -5,10 +5,10 @@
 <script>
   document.getElementsByTagName('html')[0].style.fontSize = innerWidth / 7.2 + 'px'
 </script>
-<link rel=stylesheet href=./../../css/lib/reset.min.css?201901311518>
-<link rel=stylesheet href=./../../css/lib/clever.min.css?201901311518>
-<link rel=stylesheet href=./../../css/lib/example.min.css?201901311518>
-<link rel=stylesheet href=./css/index/index.css?201901311518>
+<link rel=stylesheet href=./../../css/lib/reset.min.css?190301>
+<link rel=stylesheet href=//raw.githack.com/XAIOS/lib/master/clever/clever.min.css>
+<link rel=stylesheet href=./../../css/lib/example.min.css?190301>
+<link rel=stylesheet href=./css/index/index.css?190301>
 
 <div id=app v-cloak v-on:click.once=Bgm(1)>
   <div is=cp-page name=loading>
@@ -105,10 +105,10 @@
   </div>
 </div>
 
-<script src=./../../js/lib/vue@2.5.22.min.js?201901311518></script>
-<script src=./../../js/lib/clever.min.js?201901311518></script>
-<script src=./../../js/lib/ua.min.js?201901311518></script>
-<script src=./../../js/lib/qrcode.min.js?201901311518></script>
-<script src=./../../js/index/example.js?201901311518></script>
-<script src=./js/index/map.js?201901311518></script>
-<script src=./js/index/index.js?201901311518></script>
+<script src=./../../js/lib/vue.min.js?190301></script>
+<script src=//raw.githack.com/XAIOS/lib/master/clever/clever.min.js></script>
+<script src=./../../js/lib/ua.min.js?190301></script>
+<script src=./../../js/lib/qrcode.min.js?190301></script>
+<script src=./../../js/index/example.js?190301></script>
+<script src=./js/index/map.js?190301></script>
+<script src=./js/index/index.js?190301></script>
