--- a/examples/repo/07/index.html
+++ b/examples/repo/07/index.html
@@ -5,10 +5,10 @@
 <script>
   document.getElementsByTagName('html')[0].style.fontSize = innerWidth / 7.2 + 'px'
 </script>
-<link rel=stylesheet href=./../../css/lib/reset.min.css?190301>
+<link rel=stylesheet href=//raw.githack.com/XAIOS/lib/master/reset.min.css>
 <link rel=stylesheet href=//raw.githack.com/XAIOS/lib/master/clever/clever.min.css>
-<link rel=stylesheet href=./../../css/lib/example.min.css?190301>
-<link rel=stylesheet href=./css/index/index.css?190301>
+<link rel=stylesheet href=./../../css/lib/example.min.css?190312>
+<link rel=stylesheet href=./css/index/index.css?190312>
 
 <div id=app v-cloak>
   <div is=cp-page name=loading>
@@ -89,12 +89,11 @@
   </div>
 </div>
 
-<script src=./../../js/lib/vue.min.js?190301></script>
+<script src=//raw.githack.com/XAIOS/lib/master/vue.min.js></script>
 <script src=//raw.githack.com/XAIOS/lib/master/clever/clever.min.js></script>
-<script src=./../../js/lib/loading.min.js?190301></script>
-<script src=./../../js/lib/ua.min.js?190301></script>
-<script src=./../../js/lib/qrcode.min.js?190301></script>
-<script src=./../../js/lib/laya.core.min.js?190301></script>
-<script src=./../../js/lib/laya.webgl.min.js?190301></script>
-<script src=./../../js/index/example.js?190301></script>
-<script src=./js/index/index.js?190301></script>
+<script src=./../../js/lib/ua.min.js?190312></script>
+<script src=./../../js/lib/qrcode.min.js?190312></script>
+<script src=./../../js/lib/laya.core.min.js?190312></script>
+<script src=./../../js/lib/laya.webgl.min.js?190312></script>
+<script src=./../../js/index/example.js?190312></script>
+<script src=./js/index/index.js?190312></script>
